# Canteen-Voice-Feedback-System

./: README.md
backend/: main.py  pyproject.toml  requirements.txt
backend/app/: __init__.py
backend/app/api/: router.py
backend/app/api/routes/: asr.py  dashboard.py  feedback.py  report.py  shops.py  system.py
backend/app/core/: config.py
backend/app/db/: init_db.py  session.py
backend/app/models/: __init__.py  analysis_result.py  feedback.py  score_history.py  shop.py  shop_metric.py
backend/app/schemas/: analysis.py  asr.py  common.py  feedback.py  report.py  score.py  text_clean.py
backend/app/services/: asr_service.py  audio_service.py  llm_analysis_service.py  metrics_service.py  oss_service.py  report_service.py  scoring_service.py  text_clean_service.py
backend/app/utils/: localization.py  prompt_builder.py  shop_alias.py
backend/data/seeds/: sample_feedbacks.json  shops.json
backend/scripts/: backfill_summary_en.py
docs/: README.md
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
